# Analytics

./: .gitignore  .rooignore  README.md  pyproject.toml  requirements.txt
PowerBI/: Teachnook EdTech.pbix
PowerBI/edTech/: Published Report.txt
PowerBI/superstore/: Superstore.xls
apps/_template/backend/: main.py
apps/project1/: README.md
apps/project1/frontend/: app.py
apps/project2/: README.md  app.py
data/: README.md
markdown/: achievements.md  cv.md  others.md
markdown/m20was/.obsidian/: workspace.json
markdown/m20was/GitHub/: 1. Basic Commands.md  2. Branching & Merging.md  3. Working with Remotes.md  4. Undoing & Resetting.md  5. Advanced & Debugging.md  Git Index.md
markdown/m20was/Statistics/: 01 Foundations - Statistics to Dispersion.md  02 Descriptive Analysis - Percentiles to CLT.md  03 Distributions and Hypotheses - Lognormal to Python.md  04 Inference - Probability Functions to Confidence Intervals.md  05 Statistical Tests - Chi-square to Variance Ratio.md  Statistics Index.md
notebooks/: python-sample.ipynb  sample.ipynb
notebooks/0_others/: time-series-forecasting-for-champagne-sales.ipynb
notebooks/databricks/: README.md
notebooks/lendingClub/: lending-club-loan-default-prediction-model.ipynb  lendingclub-end-to-end-default-prediction-pipeline.ipynb
notebooks/python/: 01_python_basics.ipynb  02_Control Flows.ipynb  03_Operators.ipynb  04_Number Methods.ipynb  05_List,Dictionary,Sets etc.ipynb
notebooks/time-series/: README.md  time-series-forecasting-for-champagne-sales.ipynb
notebooks/visualization/: plotly.ipynb
python/: README.md  python_cheat_sheet.py
r-projects/Titanic/: _quarto.yml  analysis.qmd  executive_summary.qmd
sql/: README.md
sql/_templates/ddl/: README.md
sql/awesome_chocolates/: README.md
sql/geeksforgeeks/: README.md
src/shared/: __init__.py  config.py
tests/: README.md
(+42 files in other folders)
