[project]
name = "analytics-workspace"
version = "0.1.0"
description = "Notebook-first learning workspace for analytics practice with Python datasets and scripts."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.139.0",
    "groq>=1.5.0",
    "langchain>=1.3.11",
    "langgraph>=1.2.7",
    "langsmith>=0.9.7",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "nbformat>=5.10.4",
    "pydantic>=2.13.4",
    "pyspark>=4.1.2",
    "scikit-learn>=1.9.0",
    "streamlit>=1.59.0",
]
