[project]
name = "analytics-workspace"
version = "0.1.0"
description = "Notebook-first learning workspace for analytics practice with Python datasets and scripts."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi==0.139.2",
    "groq==1.5.0",
    "langchain==1.3.14",
    "langgraph==1.2.9",
    "langsmith==0.10.5",
    "pandas==3.0.3",
    "plotly==6.9.0",
    "nbformat==5.10.4",
    "pydantic==2.13.4",
    "pyspark==4.2.0",
    "scikit-learn==1.9.0",
    "statsmodels==0.14.6",
    "streamlit==1.59.2",
]
